# Rezepte_Scanner

./: Dockerfile  NOTION_SETUP.md  README.md  debug_notion.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: debug_notion_page.py  main.py
app/chains/: recipe_chain.py
app/models/: recipe.py
app/services/: notion_services.py
app/utils/: image_utils.py
