[project]
name = "rezepte-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.18",
    "langchain-core>=1.3.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langsmith>=0.8.3",
    "notion-client>=3.0.0",
    "openai>=2.36.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
